--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,20 +8,20 @@ main:
   - title: "Publications"
     url: /publications/
 
-  - title: "Talks"
-    url: /talks/    
-
   - title: "Teaching"
-    url: /teaching/    
-    
-  - title: "Portfolio"
-    url: /portfolio/
-        
-  - title: "Blog Posts"
-    url: /year-archive/
-    
+    url: /teaching/  
+
   - title: "CV"
-    url: /cv/
+    url: /cv/  
+
+  - title: "Talks"
+    url: /talks/ 
     
-  - title: "Guide"
+  # - title: "Portfolio"
+  #   url: /portfolio/
+        
+  # - title: "Blog Posts"
+  #   url: /year-archive/
+    
+  - title: "Open Sourced"
     url: /markdown/
