Working on home page

--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author:
   name             : "Parichit"
   pronouns         : # example: "she/her"  
   bio              : "Short biography for the left-hand sidebar"
-  location         : "Indiana, USA"
+  location         : "Earth"
   employer         : "Indiana University, Bloomington"
   uri              : # URL
   email            : "parishar@iu.edu" 
@@ -34,9 +34,9 @@ author:
   arxiv            : # URL - Update with the correct link to your profile
   googlescholar    : "https://scholar.google.com/citations?user=IMuiAGIAAAAJ&hl=en&inst=13098912254855678857"
   impactstory      : # URL
-  orcid            : "http://orcid.org/0000-0003-0822-1089"
+  orcid            : # URL
   semantic         : # URL
-  pubmed           : #URL
+  pubmed           : # URL
   researchgate     : "https://www.researchgate.net/profile/Parichit-Sharma"
   scopus           : # URL
 
@@ -49,7 +49,7 @@ author:
   stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
   # Social media
-  bluesky          : "bsky.app" # Replace this with you Bluesky username
+  bluesky          : # Replace this with you Bluesky username
   facebook         : # Username
   flickr           : # Username
   foursquare       : # Username
